infrastructure/k8s/jenkins/jenkins-circuitbreaker.yaml
# Circuit Breaker for jenkins Controller service
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: jenkins-circuit-breaker
spec:
  host: jenkins.jenkins.svc.cluster.local
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 1
      http:
        http1MaxPendingRequests: 1
        maxRequestsPerConnection: 1
    outlierDetection:
      consecutiveErrors: 1
      interval: 1s
      baseEjectionTime: 3m
      maxEjectionPercent: 100
