infrastructure/k8s/jenkins/jenkins-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: jenkins-gateway

spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 8080
        name: https
        protocol: HTTP
      hosts:
        - jenkins.myvirtualfridge.net
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jenkins-cicd
spec:
  hosts:
    - jenkins.myvirtualfridge.net
  gateways:
    - jenkins-gateway
  http:
    - timeout: 5s
      route:
        - destination:
            host: jenkins.jenkins.svc.cluster.local
            port:
              number: 8080
          headers:
            #This is necessary because our TLS connection gets terminated at the ELB and communication ELB->Gateway is plain http.
            #Without these headers Jenkins rewrites https to http in its response
           request:
             set:
               x-forwarded-proto: https
               x-forwarded-port: "8080"
