infrastructure/k8s/jenkins/jenkins-authpolicies.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: deny-all
  namespace: jenkins
spec:
  {}
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: jenkins-gui
  namespace: jenkins
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: jenkins-controller
  action: ALLOW
  rules:
    - from:
        - source:
            principals: ["cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account"]
      to:
        - operation:
            ports: ["8080"]
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: jenkins-agents
  namespace: jenkins
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: jenkins-controller
  action: ALLOW
  rules:
    - from:
        - source:
            namespaces: ["jenkins"]
      to:
        - operation:
            ports: ["50000"]
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: istio-system
  namespace: jenkins
spec:
  action: ALLOW
  rules:
    - from:
        - source:
            namespaces: ["istio-system"]
---
